# IPCamera

./: README.md  build.gradle  settings.gradle
aiLib/: CMakeLists.txt  build.gradle
aiLib/src/androidTest/java/com/ubeesky/lib/ai/: ExampleInstrumentedTest.java
aiLib/src/main/: AndroidManifest.xml
aiLib/src/main/assets/model/: nanodet_m.tnnmodel  sim_m.tnnmodel  sim_m.tnnproto
aiLib/src/main/cpp/: CCNDKLogDef.h  FFBridge.cpp  FFBridge.h  FFDemux.cpp  FFDemux.h  RTSPRender.cpp
aiLib/src/main/cpp/cc/: fps_counter_jni.h  helper_jni.h  object_detector_nanodet.h  object_detector_nanodet_jni.cc  object_detector_nanodet_jni.h  object_detector_yolo.h  tnn_lib.cc  tnn_sdk_sample.cc
aiLib/src/main/cpp/libs/ffmpeg/include/libavutil/: ffversion.h
aiLib/src/main/cpp/libs/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
aiLib/src/main/java/com/ubeesky/lib/ai/: AIDetectResult.java  AINative.java  FileUtil.java  FileUtils.java  FpsCounter.java  Helper.java
aiLib/src/test/java/com/ubeesky/lib/ai/: ExampleUnitTest.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pedro/sample/: CameraDemoActivity.kt  ConnectCheckerRtp.kt  DisplayActivity.java  DisplayService.kt  MainActivity.kt  OverlayView.java  PathUtils.java  RtspFromFileActivity.java
app/src/main/res/layout/: activity_camera_demo.xml  activity_display.xml  activity_from_file.xml
encoder/: build.gradle
encoder/src/main/java/com/pedro/encoder/: BaseEncoder.java  EncoderCallback.java  Frame.java  GetFrame.java
encoder/src/main/java/com/pedro/encoder/audio/: AudioEncoder.java  GetAacData.java
encoder/src/main/java/com/pedro/encoder/utils/: BitmapUtils.java  CodecUtil.java  FaceDetectorUtil.java  FaceParsed.java  PCMUtil.java
encoder/src/main/java/com/pedro/encoder/video/: GetVideoData.java  (+2 more)
encoder/src/main/res/raw/: analog_tv_fragment.glsl  android_view_fragment.glsl  basic_deformation_fragment.glsl  beauty_fragment.glsl  black_fragment.glsl  blur_fragment.glsl  brightness_fragment.glsl  camera_fragment.glsl  cartoon_fragment.glsl  circle_fragment.glsl  color_fragment.glsl  contrast_fragment.glsl  duotone_fragment.glsl  earlybird_fragment.glsl  edge_detection_fragment.glsl  exposure_fragment.glsl  fire_fragment.glsl  fxaa.glsl  fxaa_pc.glsl  gamma_fragment.glsl  glitch_fragment.glsl  grey_scale_fragment.glsl  halftone_lines_fragment.glsl  image70s_fragment.glsl  lamoish_fragment.glsl  money_fragment.glsl  negative_fragment.glsl  object_fragment.glsl  object_vertex.glsl  pixelated_fragment.glsl  polygonization_fragment.glsl  rainbow_fragment.glsl  rgb_saturation_fragment.glsl  ripple_fragment.glsl  saturation_fragment.glsl  sepia_fragment.glsl  sharpness_fragment.glsl  simple_vertex.glsl  snow_fragment.glsl  surface_fragment.glsl  (+3 more)
gradle/wrapper/: gradle-wrapper.properties
rtmp/: build.gradle
rtmp/src/test/java/android/media/: MediaCodec.java
rtmp/src/test/java/android/util/: Base64.java  Log.java
rtplibrary/: build.gradle
rtplibrary/src/main/res/values/: attrs.xml
rtsp/: build.gradle
rtspserver/: build.gradle
rtspserver/src/main/java/com/pedro/rtspserver/: ClientListener.kt  RtspServer.kt  RtspServerCamera1.kt  RtspServerCamera2.kt  RtspServerDisplay.kt  RtspServerFromFile.kt  RtspServerOnlyAudio.kt  ServerClient.kt  ServerCommandManager.kt
(+254 files in other folders)
